Removed OpenCL stuff. That will be part of a different repo in future.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,16 +18,16 @@ include_directories(
 add_library(
 	nnet
 	source/core.cpp
-	source/x86/X86ActivationFunction.cpp
-	source/x86/X86Convolutional.cpp
-	source/x86/X86Dropout.cpp
-	source/x86/X86FeedForward.cpp
-	source/x86/X86FullyConnected.cpp
-	source/x86/X86Layer.cpp
-	source/x86/X86Loss.cpp
-	source/x86/X86MaxPool.cpp
-	source/x86/X86UpdateRule.cpp
-	source/x86/vector.cpp
+	source/ActivationFunction.cpp
+	source/Convolutional.cpp
+	source/Dropout.cpp
+	source/FeedForward.cpp
+	source/FullyConnected.cpp
+	source/Layer.cpp
+	source/Loss.cpp
+	source/MaxPool.cpp
+	source/UpdateRule.cpp
+	source/vector.cpp
 )
 
 add_executable(
