Added fast sliding window code and moved some utils to other repos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if(ENABLE_AVX)
 	add_definitions(-DHAVE_AVX -mavx -mavx2 -mfma)
 endif()
 
-add_definitions(-g -O3)
+add_definitions(-g -O3 -Wall)
 add_definitions(-std=c++11)
 
 include_directories(
@@ -26,19 +26,69 @@ add_library(
 	source/Layer.cpp
 	source/Loss.cpp
 	source/MaxPool.cpp
+	source/SlidingFullyConnected.cpp
+	source/SpatialConvolutional.cpp
 	source/UpdateRule.cpp
 	source/vector.cpp
 )
 
 add_executable(
-	cifar10cnn
-	util/cifar10.cpp
-	util/cifar10cnn.cpp
+	mincnn
+	util/mincnn.cpp
 	util/evaluate.cpp
 )
 
 target_link_libraries(
-	cifar10cnn
+	mincnn
+	nnet
+	fftw3f
+)
+
+add_executable(
+	showfilters
+	util/showfilters.cpp
+)
+
+target_link_libraries(
+	showfilters
+	pthread
+	X11
+)
+
+add_executable(
+	mnistcnn
+	util/mnistcnn.cpp
+	util/mnist.cpp
+	util/evaluate.cpp
+)
+
+target_link_libraries(
+	mnistcnn
+	nnet
+	fftw3f
+)
+
+add_executable(
+	corelcbir
+	util/corelcbir.cpp
+	util/evaluate.cpp
+)
+
+target_link_libraries(
+	corelcbir
+	nnet
+	fftw3f
+	pthread
+	X11
+)
+
+add_executable(
+	corelvecs
+	util/corelvecs.cpp
+)
+
+target_link_libraries(
+	corelvecs
 	nnet
 	fftw3f
 )
