Started moving utilities to other repos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if(ENABLE_AVX)
 	add_definitions(-DHAVE_AVX -mavx -mavx2 -mfma)
 endif()
 
-add_definitions(-g -O3 -Wall)
+add_definitions(-O3 -Wall)
 add_definitions(-std=c++11)
 
 include_directories(
@@ -30,78 +30,6 @@ add_library(
 	source/SpatialConvolutional.cpp
 	source/UpdateRule.cpp
 	source/vector.cpp
-)
-
-add_executable(
-	mincnn
-	util/mincnn.cpp
-	util/evaluate.cpp
-)
-
-target_link_libraries(
-	mincnn
-	nnet
-	fftw3f
-)
-
-add_executable(
-	showfilters
-	util/showfilters.cpp
-)
-
-target_link_libraries(
-	showfilters
-	pthread
-	X11
-)
-
-add_executable(
-	mnistcnn
-	util/mnistcnn.cpp
-	util/mnist.cpp
-	util/evaluate.cpp
-)
-
-target_link_libraries(
-	mnistcnn
-	nnet
-	fftw3f
-)
-
-add_executable(
-	corelcbir
-	util/corelcbir.cpp
-	util/evaluate.cpp
-)
-
-target_link_libraries(
-	corelcbir
-	nnet
-	fftw3f
-	pthread
-	X11
-)
-
-add_executable(
-	corelvecs
-	util/corelvecs.cpp
-)
-
-target_link_libraries(
-	corelvecs
-	nnet
-	fftw3f
-)
-
-add_executable(
-	vector
-	util/vector.cpp
-)
-
-target_link_libraries(
-	vector
-	fftw3f
-	nnet
 )
 
 install(TARGETS nnet DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
